# dnfstrap

./: .gitignore  README.md  configure.ac
src/: Makefile.am  dlopen.vapi  dnfstrap.vala  install-context.vala  libdnf.vapi  native-arches.h  native-arches.vapi  preload-hacks.c  rpmts-preload.c  rpmts-preload.h
